--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+  overflow-x: hidden;
 }
 
 /*
@@ -1425,6 +1426,7 @@ p{
    Main Nav
    ========================================================================== */
 
+  
 .sticky-bar{
   position: fixed;
   top:0;
@@ -1697,7 +1699,9 @@ p{
 .slide-container{
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  left: 50%;
+  transform: translate(-50%,-50%);
+  max-width:1200px;
   width: 100%;
 }
 
@@ -1705,7 +1709,21 @@ p{
   margin-top:160px;
 }
 
+.scroll-guide{
+  position: absolute;
+  right: 10px;
+  bottom: 25%;
+}
 
+.scroll-down{
+  transform: rotate(-90deg);
+  color:#fff;
+  font-size:12px;
+}
+
+.scroll-down img{
+  padding-right:20px;
+}
 
 /* ==========================================================================
    Video Banner
@@ -1818,14 +1836,17 @@ p{
 /* ==========================================================================
    Footer 
    ========================================================================== */
-
 footer{
+  background-color:#0f0f0f;
+  color:#fff;
+}
+
+.footer-1{
     background: #0f0f0f; /* Old browsers */
     background: -moz-linear-gradient(left,  #0f0f0f 0%, #0f0f0f 44%, #00d9d0 44%, #00d9d0 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(left,  #0f0f0f 0%,#0f0f0f 44%,#00d9d0 44%,#00d9d0 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to right,  #0f0f0f 0%,#0f0f0f 44%,#00d9d0 44%,#00d9d0 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0f0f0f', endColorstr='#00d9d0',GradientType=1 ); /* IE6-9 */
-    color:#fff;
 }
 
 .footer-1 .subtitle{
@@ -2066,6 +2087,145 @@ footer a{
 
 .align-center{
   align-items: center;
+}
+
+/* ==========================================================================
+   responsive
+   ========================================================================== */
+
+.mobile{
+  display:none;
+}
+
+.desktop{
+  display:block;
+}
+
+.main-nav-mobile{
+  padding:20px 15px;
+}
+
+.main-nav-mobile a{
+  float:left;
+}
+
+.main-nav-mobile a{
+  float:left;
+}
+
+.main-nav-mobile .menu{
+  float:right;
+}
+
+.main-nav-mobile img{
+  max-width:170px;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 30px;
+  height: 1px;
+  background-color: #fff;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-4px, -1px);
+}
+
+@media (max-width: 768px) {
+  .desktop{
+    display:none;
+  }
+  .mobile{
+    display:block;
+  }
+  h1{
+    font-size:40px;
+  }
+  h2{
+    font-size:30px;
+  }
+  p{
+    font-size:16px;
+  }
+  .wrapper{
+    padding:0 20px;
+  }
+  .left-slider{
+    transform: unset;
+  }
+  .section-1{
+    padding:50px 0;
+  }
+  .section-2{
+    padding:80px 0;
+  }
+  .section-4{
+    padding-top:0;
+    padding-bottom:60px;
+  }
+  .img-container{
+    padding:10px;
+  }
+  .img-container span{
+    position: relative;
+    left:0;
+    bottom:unset;
+    width: calc(100% - 20px);
+    display: block;
+  }
+  .video-banner-wrap iframe{
+    height:200px;
+  }
+  .section-2 .spacer{
+    padding-top:60px;
+  }
+  .top-offset{
+    margin-top:-60px;
+  }
+  .primary-article{
+    margin-top:0;
+    margin-left: -15px;
+    margin-right: -15px;
+    padding:35px 20px;
+  }
+  .articles{
+    margin-top:60px;
+  }
+  .article-spacer{
+    border-top: 1px solid #999;
+    margin: 1.5em 0;
+  }
+  .team .padding-right{
+    padding-right:0;
+    margin-left: -15px;
+    margin-right: -15px;
+    margin-bottom:50px;
+  }
+  .footer-1{
+    background:#0f0f0f;
+  }
+  .footer-form{
+    padding:60px 20px;
+    margin-left: -20px;
+    margin-right: -20px; 
+  }
+  .footer-form input{
+    width: calc(100% - 15px);
+  }
+}
+
+@media (max-width: 576px) {
+
 }
 
 
