--- a/css/main.css
+++ b/css/main.css
@@ -355,7 +355,7 @@ p{
   --bs-gutter-y: 3rem;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 0px) {
   .col-sm {
     flex: 1 0 0%;
   }
@@ -1953,6 +1953,7 @@ footer a{
 
 .footer-2 input{
   width: 80%;
+  color: #fff;
   background-color:#0F0F0F;
   border:1px solid #fff;
   border-radius: 30px;
@@ -2115,6 +2116,7 @@ footer a{
 
 .main-nav-mobile .menu{
   float:right;
+  cursor: pointer;
 }
 
 .main-nav-mobile img{
@@ -2149,19 +2151,69 @@ footer a{
     display:block;
   }
   h1{
-    font-size:40px;
+    font-size:32px;
+    line-height: 52px;
   }
   h2{
-    font-size:30px;
+    font-size:25px;
+    line-height: 41px;
   }
   p{
     font-size:16px;
   }
-  .wrapper{
+  .wrapper, .larger-wrapper{
     padding:0 20px;
+  }
+  .btn-blue-ball .btn-ball{
+    display:none;
+  }
+  .btn-blue-ball.btn-light{
+    background-color:#00D9D0;
+    border-radius:30px;
+    padding:10px 0;
+    transition: 500ms all ease;
+  }
+  .btn-blue-ball.btn-dark{
+    background-color:#fff!important;
+    border-radius:30px;
+    padding:10px 0;
+    transition: 500ms all ease;
+  }
+  .btn-blue-ball.btn-light span{
+    color:#fff;
+    margin:0 auto;
+    display:block;
+  }
+  .btn-blue-ball.btn-dark span{
+    color:#00D9D0;
+    margin:0 auto;
+    display:block;
+  }
+  .btn-blue-ball.btn-light:hover{
+    filter: drop-shadow(0px 0px 10px #00D9D0);
+  }
+  .btn-blue-ball.btn-dark:hover{
+    filter: drop-shadow(0px 0px 10px #00D9D0);
+  }
+  .btn-blue-ball span{
+    position: relative;
+    margin-left:0;
   }
   .left-slider{
     transform: unset;
+  }
+  .carousel-wrapper .item span{
+    left:10px;
+    width: 70%;
+    font-size:16px;
+  }
+  .owl-carousel .owl-item img{
+    max-width: calc(100% - 40px)!important;
+    height:auto!important;
+    padding-left:20px;
+  }
+  .owl-carousel .owl-stage-outer{
+    padding-left:0;
   }
   .section-1{
     padding:50px 0;
@@ -2194,8 +2246,8 @@ footer a{
   }
   .primary-article{
     margin-top:0;
-    margin-left: -15px;
-    margin-right: -15px;
+    margin-left: -20px;
+    margin-right: -20px;
     padding:35px 20px;
   }
   .articles{
@@ -2207,25 +2259,56 @@ footer a{
   }
   .team .padding-right{
     padding-right:0;
-    margin-left: -15px;
-    margin-right: -15px;
+    margin-left: -20px;
+    margin-right: -20px;
     margin-bottom:50px;
   }
   .footer-1{
     background:#0f0f0f;
   }
+  .footer-2{
+    padding-top:0;
+  }
+  .footer-2 h4{
+    font-weight:400;
+  }
   .footer-form{
-    padding:60px 20px;
     margin-left: -20px;
-    margin-right: -20px; 
+    margin-right: -20px;
+    margin-bottom: 60px;
+    padding:60px 20px; 
   }
   .footer-form input{
-    width: calc(100% - 15px);
+    width: 100%;
+  }
+  .team .padding-left{
+    padding-left:0;
+  }
+  .team .padding-right{
+    padding-right:0;
+  }
+  .order-first{
+    order: 1;
+  }
+  .order-second{
+    order: 2;
+  }
+  .newsletter input, .newsletter a{
+    float:none;
+  }
+  .newsletter form{
+    display: block;
+  }
+  .footer-2 input{
+    width: calc(100% - 40px);
+    margin-bottom:10px;
   }
 }
 
 @media (max-width: 576px) {
-
+  h1 br, h2 br, h3 br, h4 br{
+    display:none;
+  }
 }
 
 
