--- a/css/main.css
+++ b/css/main.css
@@ -1539,6 +1539,7 @@ p{
 .btn:hover{
   filter: drop-shadow(0px 0px 10px #00D9D0);
   font-weight:700;
+  text-decoration:none!important;
 }
 
 .btn-light{
@@ -1564,6 +1565,7 @@ p{
 }
 
 .btn-ball{
+  position: relative;
   width:42px;
   height:42px;
   border-radius: 20px;
@@ -1591,8 +1593,9 @@ p{
 
 .btn-arrow{
   position: absolute;
-  margin-top: 17px;
-  margin-left: 13px;
+  top:50%;
+  left:50%;
+  transform:translate(-50% , -50%);
   transition:500ms all ease;
 }
 
@@ -1840,8 +1843,20 @@ p{
   padding-bottom:60px;
 }
 
-.industry.section-2{
+.industry.section-3{
+  margin-top:-50px;
+  padding-top:200px;
+  padding-bottom:100px;
+  background-color:#0F0F0F;
+  color:#fff;
+}
 
+.contact.section-2{
+  padding-top:115px;
+  padding-bottom:150px;
+  margin-top:-50px;
+  background-color:#0F0F0F;
+  color:#fff;
 }
 
 
@@ -2116,6 +2131,9 @@ footer a{
   text-decoration: underline;
 }
 
+.footer-1 .btn-blue-ball.btn-dark{
+  margin-top:40px;
+}
 
 
 /* ==========================================================================
@@ -2206,6 +2224,10 @@ footer a{
   display:none;
 }
 
+.always-open{
+  display:block!important;
+}
+
 .accordion{
   display: flex;
   flex-direction: row;
@@ -2216,7 +2238,7 @@ footer a{
   border-left:0;
   border-right:0;
   border-bottom:0;
-  padding:20px 60px;
+  padding:15px 60px;
   cursor: pointer;
   transition: 500ms all ease;
 }
@@ -2240,11 +2262,20 @@ footer a{
 }
 
 .accordion:hover .circle-plus{
+  background-color:#fff;
+}
+
+.accordion:hover .circle-plus img{
+  filter:invert(1);
+}
+
+
+.active.accordion .circle-plus{
   transform: rotate(45deg);
   background-color: #fff;
 }
 
-.accordion:hover .circle-plus img{
+.active.accordion .circle-plus img{
   filter: invert(1);
 }
 
@@ -2262,7 +2293,50 @@ footer a{
   margin-top:-30%;
 }
 
+.blue-txt{
+  color:#00d9d0;
+}
 
+.contact-blue{
+  position: relative;
+  margin-top:60px;
+  z-index:2;
+}
+
+.contact-blue .padding-left p{
+  font-size:22px;
+  padding-top:110px;
+}
+
+.contact-img{
+  position: relative;
+  z-index: 1;
+  margin-top:-27%;
+}
+
+.blue-board{
+  background-color:#00D9D0;
+  padding:90px 80px;
+  color:#fff;
+}
+
+.blue-board h3{
+  margin-bottom:35px;
+}
+
+.blue-board p{
+  margin:35px 0;
+}
+
+.blue-board a{
+  color:#fff;
+  font-weight:700;
+  text-decoration: none;
+}
+
+.blue-board a:hover{
+  text-decoration:underline;
+}
 
 
 
