--- a/css/main.css
+++ b/css/main.css
@@ -1601,7 +1601,7 @@ p{
 
 .btn-blue-ball:hover .btn-arrow,
 .btn-blue-ball:visited .btn-arrow{
-  transform:translateX(159px);
+  left:85%;
 }
 
 .btn-blue-ball:visited .btn-ball{
@@ -1765,7 +1765,7 @@ p{
   padding:150px 0;
 }
 
-.homepagev.section-2{
+.homepage.section-2{
   padding:100px 0;
 }
 
@@ -1859,6 +1859,53 @@ p{
   color:#fff;
 }
 
+.blog.section-1 .primary-article{
+  margin-top:-60%;
+  color:#fff;
+}
+
+.blog.section-2{
+  padding-top:60px;
+}
+
+.blog.section-2 .subtitle{
+  color:#999;
+}
+
+.blog.section-2 a{
+  text-decoration:none;
+  color:#1F1F1F;
+}
+
+.blog.section-2 a:hover .article-title{
+  text-decoration:underline;
+}
+
+.blog.section-3{
+  padding-top:150px;
+  padding-bottom:80px;
+  background-color:#0F0F0F;
+  color:#fff;
+}
+
+.blogpost.head-section{
+  padding-top:80px;
+  padding-bottom:0;
+}
+
+.blogpost.section-1{
+  padding-bottom:70px;
+}
+
+.blogpost.section-2{
+  padding-bottom:125px;
+}
+
+.blogpost.section-3{
+  padding:130px 0;
+  background-color:#0F0F0F;
+  color:#fff;
+}
 
 /* ==========================================================================
    artigos
@@ -2338,6 +2385,15 @@ footer a{
   text-decoration:underline;
 }
 
+.article-info{
+  padding:15px 50px 50px;
+}
+
+.btn-container{
+  display:flex;
+  justify-content: center;
+  margin-bottom:80px;
+}
 
 
 /* ==========================================================================
