--- a/css/main.css
+++ b/css/main.css
@@ -1521,21 +1521,22 @@ p{
 
 .nav-mobile{
   position: fixed;
-  top:65px;
+  top:60px;
   left:0;
   right:0;
   bottom:0;
-  height:100vh;
+  height:calc(100vh - 60px);
   width: calc(100% - 40px);
   background-color:#fff;
-  padding:50px 20px; 
+  padding:0px 20px; 
   display:none;
   transition:500ms all ease; 
 }
 
 .nav-mobile ul{
   list-style-type: none;
-  margin: 0;
+  margin-top:50px;
+  margin-left:0;
   padding: 0;
 }
 
@@ -1560,6 +1561,12 @@ p{
   font-size:11px;
 }
 
+.nav-mobile .social{
+  position: absolute;
+  width: calc(100% - 40px);
+  bottom: 30px;
+}
+
 .nav-mobile .social-media{
   color:#1F1F1F;
   white-space: nowrap;
@@ -1580,10 +1587,6 @@ p{
 .nav-mobile .social-links a{
   filter: invert(1) brightness(100);
   margin-left:25px;
-}
-
-.nav-mobile .social{
-
 }
 
 
@@ -1827,13 +1830,13 @@ p{
   width: 100%;
 }
 
-.slide-container .social-media{
+.slide-container .social{
   margin-top:160px;
 }
 
 .scroll-guide{
   position: absolute;
-  right: 10px;
+  right: 0;
   bottom: 25%;
 }
 
@@ -1894,6 +1897,14 @@ p{
   color:#fff;
   padding-top:90px;
   padding-bottom:170px;
+}
+
+.homepage.section-1 .btn-blue-ball,
+.homepage.section-2 .btn-blue-ball,
+.homepage.section-3 .btn-blue-ball,
+.homepage.section-4 .btn-blue-ball{
+  margin-top: 35px;
+  margin-bottom: 35px;
 }
 
 .head-section{
@@ -2032,8 +2043,9 @@ p{
   padding-bottom:125px;
 }
 
-.blogpost.section-2 .social-media{
+.blogpost.section-2 .social{
   color:#999;
+  margin-top:50px;
 }
 
 .blogpost.section-2  .social-media .white-line{
@@ -2047,10 +2059,6 @@ p{
 .blogpost.section-2 h2{
   font-size:25px;
   line-height: 41px;
-}
-
-.blogpost.section-2 .social-media{
-  margin-top:50px;
 }
 
 .blogpost.section-3{
@@ -2294,6 +2302,10 @@ footer a{
   background-color:#0F0F0F;
 }
 
+.social{
+  display:flex;
+}
+
 .social-media{
   display:flex;
   flex-direction: row;
@@ -2309,12 +2321,12 @@ footer a{
   margin:0 20px;
 }
 
-.social-media a{
+.social a{
   margin-right:15px;
   transition:500ms all ease;
 }
 
-.social-media a:hover{
+.social a:hover{
   transform:scale(1.3);
 }
 
@@ -2639,7 +2651,7 @@ footer a{
 }
 
 .main-nav-mobile{
-  padding:20px 0px;
+  padding:15px 0px;
 }
 
 .main-nav-mobile a{
@@ -2685,6 +2697,14 @@ footer a{
   transform: rotate(45deg) translate(-4px, -1px);
 }
 
+@media (max-width: 1420px) {
+
+  .scroll-guide{
+    bottom:40%;
+  }
+
+}
+
 @media (max-width: 768px) {
   .desktop{
     display:none;
@@ -2707,10 +2727,13 @@ footer a{
   p{
     font-size:16px;
   }
+  .light-nav{
+    height:60px;
+  }
   .nav-bar{
     background-color:#fff;
     position: fixed;
-    height:65px;
+    height:60px;
   }
   .nav-bar .menu .bar1,
   .nav-bar .menu .bar2,
@@ -3008,6 +3031,27 @@ footer a{
   }
   .industry-post.section-3 .btn-blue-ball{
     margin-top:45px;
+  }
+  .absolute-footer .social{
+    margin-bottom: 30px;
+  }
+  .social{
+    display:block;
+  }
+  .social-media{
+    white-space: nowrap;
+  }
+  .social-media .white-line{
+    width: 100%;
+    margin-right:0;
+  }
+  .social-links{
+    margin-top: 20px;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .social-links a{
+    margin-left: 25px;
   }
 }
 
