--- a/css/main.css
+++ b/css/main.css
@@ -1531,6 +1531,7 @@ p{
   padding:0px 20px; 
   display:none;
   transition:500ms all ease; 
+  z-index:99;
 }
 
 .nav-mobile ul{
@@ -1586,7 +1587,6 @@ p{
 
 .nav-mobile .social-links a{
   filter: invert(1) brightness(100);
-  margin-left:25px;
 }
 
 
@@ -2322,7 +2322,7 @@ footer a{
 }
 
 .social a{
-  margin-right:15px;
+  margin-left:15px;
   transition:500ms all ease;
 }
 
@@ -3049,9 +3049,6 @@ footer a{
     margin-top: 20px;
     display: flex;
     justify-content: flex-end;
-  }
-  .social-links a{
-    margin-left: 25px;
   }
 }
 
