--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,7 @@ h1{
 
 h2{
   font-size:45px;
+  line-height: 74px;
   margin:0.2em 0;
 }
 h3{
@@ -114,6 +115,13 @@ h3{
 
 p{
   font-size:18px;
+  line-height: 30px;
+  color:#1F1F1F;
+}
+
+.lead{
+  font-size:22px;
+  line-height: 34px;
 }
 
 .subtitle{
@@ -1720,8 +1728,8 @@ p{
 .btn-go{
   width:42px;
   height:42px;
-  background-color:#00D9D0;
   border-radius: 20px;
+  border:1px solid #00D9D0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1729,9 +1737,12 @@ p{
 }
 
 .btn-go:hover{
-  filter: drop-shadow(0px 0px 10px #00D9D0);
+  background-color:#00D9D0;
 }
 
+.btn-go:hover img{
+  filter: brightness(100);
+}
 
 /* ==========================================================================
    Main Page Slider
@@ -1928,6 +1939,10 @@ p{
   padding-bottom:170px;
 }
 
+.homepage.section-4 p{
+  color:#fff;
+}
+
 .homepage.section-1 .btn-blue-ball,
 .homepage.section-2 .btn-blue-ball,
 .homepage.section-3 .btn-blue-ball,
@@ -1972,17 +1987,14 @@ p{
 
 .services.section-2 ul{
   list-style-type: none;
-  margin: 30px 0 0;
+  margin: 48px 0 0;
   padding: 0;
-}
-
-.services.section-2 ul li{
-  padding:5px 0;
 }
 
 .services.section-2 ul li a{
   text-decoration: none;
   color:#999;
+  line-height: 45px;
 }
 
 .services.section-2 ul li a:hover{
@@ -2002,7 +2014,7 @@ p{
 }
 
 .industry.section-3{
-  margin-top:-50px;
+  margin-top:-70px;
   padding-top:200px;
   padding-bottom:100px;
   background-color:#0F0F0F;
@@ -2071,6 +2083,13 @@ p{
 
 .blogpost.section-2{
   padding-bottom:125px;
+}
+
+.blogpost.section-2 .subtitle{
+  letter-spacing: 0;
+  line-height: 30px;
+  color: #999;
+  margin-top: 1em;
 }
 
 .blogpost.section-2 .social{
@@ -2154,6 +2173,14 @@ p{
   margin-top:25px;
 }
 
+.primary-article .article-title{
+  font-weight: 400;
+}
+
+.primary-article .subtitle{
+  letter-spacing: 0;
+}
+
 .article-title{
   font-size:26px;
   line-height: 43px;
@@ -2191,7 +2218,7 @@ p{
   font-size:22px;
   font-weight:600;
   margin-top:0;
-  margin-bottom:15px;
+  margin-bottom:5px;
 }
 
 .articles .article-short{
@@ -2204,6 +2231,10 @@ p{
    ========================================================================== */
 footer{
   background-color:#0f0f0f;
+  color:#fff;
+}
+
+footer p{
   color:#fff;
 }
 
@@ -2259,8 +2290,12 @@ footer a{
   color:#fff;
   width: 100%;
   height: 35px;
-  margin: 10px 0;
+  margin: 27px 0;
   padding-left: 10px;
+}
+
+.footer-form input:first-child{
+  margin-top:0;
 }
 
 .footer-form input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -2445,6 +2480,9 @@ footer a{
   font-weight:600;
   padding:10px 0 10px 20px;
   width:calc(95% - 35px);
+  min-height: 70px;
+  display: flex;
+  align-items: center;
 }
 
 .top-offset{
@@ -2574,6 +2612,10 @@ footer a{
   margin-top:-30%;
 }
 
+.offset-panel-blue p{
+  color:#fff;
+}
+
 .blue-txt{
   color:#00d9d0;
 }
@@ -2622,6 +2664,11 @@ footer a{
 .article-info{
   padding:15px 50px 50px;
 }
+
+.article-info .subtitle{
+  letter-spacing: 0;
+}
+
 
 .btn-container{
   display:flex;
