--- a/css/main.css
+++ b/css/main.css
@@ -3320,6 +3320,22 @@ animation-delay: 850ms;
 .animista.appear .anim-delay-0-15 {
 animation-delay: 900ms;
 }
+.animista.appear .anim-delay-0-16 {
+  animation-delay: 950ms;
+}
+.animista.appear .anim-delay-0-17 {
+  animation-delay: 1000ms;
+}
+.animista.appear .anim-delay-0-18 {
+  animation-delay: 1050ms;
+}
+.animista.appear .anim-delay-0-19 {
+  animation-delay: 1100ms;
+}
+.animista.appear .anim-delay-0-20 {
+  animation-delay: 1150ms;
+}
+
 
 
 
